--- a/training-system/src/app/components/auth/login/login.component.html
+++ b/training-system/src/app/components/auth/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<app-header></app-header>
+<div class="login-layout">
+  <div class="form-placeholder">
+    <h1 class="mat-h1 login-header">Вход</h1>
+    <form [formGroup]="_loginForm" class="login-form" (ngSubmit)="onSubmit($event)">
+      <div class="form-layout">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Email</mat-label>
+          <input matInput placeholder="Введите email" formControlName="email">
+        </mat-form-field>
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Пароль</mat-label>
+          <input type="password" matInput placeholder="Введите пароль" formControlName="password">
+        </mat-form-field>
+        <!--<div class="register-form_toggle-wrapper">
+          <div></div>
+          <div><mat-slide-toggle class="register-form_toggle" (change)="onChangeRole($event)">Учитель</mat-slide-toggle></div>
+          <div></div>
+        </div>-->
+        <button mat-raised-button color="primary" type="submit">Войти</button>
+      </div>
+    </form>
+  </div>
+</div>
