--- a/training-system/src/app/components/auth/login/login.component.html
+++ b/training-system/src/app/components/auth/login/login.component.html
@@ -17,7 +17,7 @@
           <div><mat-slide-toggle class="register-form_toggle" (change)="onChangeRole($event)">Учитель</mat-slide-toggle></div>
           <div></div>
         </div>-->
-        <button mat-raised-button color="primary" type="submit">Войти</button>
+        <button style="width: 65%; height:50px;align-self: center" mat-raised-button color="primary" type="submit">Войти</button>
       </div>
     </form>
   </div>
