--- a/training-system/src/app/components/auth/login/login.component.less
+++ b/training-system/src/app/components/auth/login/login.component.less
@@ -1,3 +1,7 @@
+h1{
+  font-family: Raleway, "Helvetica Neue", sans-serif;
+}
+
 .login-layout {
   padding-top: 50px;
   display: flex;
@@ -9,7 +13,7 @@
     display: flex;
     padding: 50px;
     background-color: #F5F5F5;
-    width: 500px;
+    width: 450px;
     border-radius: 50px;
     justify-content: center;
 
@@ -17,7 +21,7 @@
       .form-layout {
         display: flex;
         flex-direction: column;
-        max-width: 500px;
+        max-width: 450px;
       }
 
       /*&_toggle-wrapper {
@@ -33,6 +37,7 @@
 
     .login-header {
       text-align: center;
+      font-family: 'Montserrat Alternates', sans-serif;
     }
   }
 }
