--- a/training-system/src/app/components/header/header.component.html
+++ b/training-system/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
   <span class="example-spacer"></span>
   <span class="example-spacer"></span>
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <span class="mat-h1">Вход</span>
+    <span class="mat-h1 enter">Вход</span>
   </button>
   <span class="example-spacer"></span>
 </mat-toolbar>
