--- a/training-system/src/app/components/auth/login/login.component.html
+++ b/training-system/src/app/components/auth/login/login.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header
+  [currentTab]="'login'"
+></app-header>
 <div class="login-layout">
   <div class="form-placeholder">
     <h1 class="mat-h1 login-header">Вход</h1>
