--- a/training-system/src/app/components/auth/register/register.component.html
+++ b/training-system/src/app/components/auth/register/register.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header
+  [currentTab]="'register'"
+></app-header>
 <div class="register-layout">
   <div class="form-placeholder">
     <h1 class="mat-h1 register-header">Регистрация</h1>
