--- a/training-system/src/app/components/shared/header/header.component.html
+++ b/training-system/src/app/components/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<!--Кейс регистрации-->
+<!--Таба регистрации-->
 <mat-toolbar *ngIf="currentTab === 'register' || currentTab ===''">
   <span class="example-spacer"></span>
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
@@ -14,7 +14,7 @@
   </button>
   <span class="example-spacer"></span>
 </mat-toolbar>
-<!--Кейс логина-->
+<!--Таба логина-->
 <mat-toolbar *ngIf="currentTab === 'login'">
   <span class="example-spacer"></span>
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
@@ -27,6 +27,41 @@
           (click)="navigate('register')"
   >
     <span class="mat-h1 enter">Регистрация</span>
+  </button>
+  <span class="example-spacer"></span>
+</mat-toolbar>
+<!--Таба задач-->
+<mat-toolbar *ngIf="currentTab === 'tasks' || currentTab === 'other'">
+  <span class="example-spacer">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <mat-icon>computer</mat-icon>
+    </button>
+  </span>
+  <span class="example-spacer">
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"
+            (click)="navigate('tasks')"
+    >
+    <span class="mat-h1 enter">Задания</span>
+  </button>
+  </span>
+  <span class="example-spacer">
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"
+            (click)="navigate('marks')"
+    >
+    <span class="mat-h1 enter">Оценки</span>
+  </button>
+  </span>
+  <span class="example-spacer">
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"
+            (click)="navigate('info')"
+    >
+    <span class="mat-h1 enter">Справка</span>
+  </button>
+  </span>
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"
+          (click)="navigate('login')"
+  >
+    <span class="mat-h1 enter">Выход</span>
   </button>
   <span class="example-spacer"></span>
 </mat-toolbar>
