--- a/training-system/src/app/components/info/info.component.html
+++ b/training-system/src/app/components/info/info.component.html
@@ -3,3 +3,64 @@
 >
 </app-header>
 <p>info works!</p>
+
+<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+
+<!--<app-header-->
+<!--  [currentTab]="'other'"-->
+<!--&gt;-->
+<!--</app-header>-->
+<!--<ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">-->
+<!--  <li [ngbNavItem]="1">-->
+<!--    <a ngbNavLink>One</a>-->
+<!--    <ng-template ngbNavContent>-->
+<!--      <div class="container">-->
+<!--        <div class="row col-md-6 col-md-offset-2 custyle">-->
+<!--          <table class="table table-striped custab">-->
+<!--            <thead>-->
+<!--            <tr>-->
+<!--              <th>Имя</th>-->
+<!--              <th>Логин</th>-->
+
+<!--            </tr>-->
+<!--            </thead>-->
+<!--            <tbody>-->
+<!--            <tr *ngFor="let user of studentsInGroup">-->
+<!--              <td>{{user.fio}}</td>-->
+<!--              <td>{{user.username}}</td>-->
+<!--      &lt;!&ndash;        <td class="text-center"><button class="btn btn-danger btn-xs" (click)="delteUser(user.id)"><span class="glyphicon glyphicon-remove"></span> Delete</button></td>&ndash;&gt;-->
+<!--            </tr>-->
+<!--            </tbody>-->
+<!--          </table>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </ng-template>-->
+<!--  </li>-->
+<!--  <li [ngbNavItem]="2">-->
+<!--    <a ngbNavLink>Two</a>-->
+<!--    <ng-template ngbNavContent>-->
+<!--      <p>Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko-->
+<!--        farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts-->
+<!--        ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar-->
+<!--        helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson-->
+<!--        8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester-->
+<!--        stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>-->
+<!--    </ng-template>-->
+<!--  </li>-->
+<!--  <li [ngbNavItem]="3">-->
+<!--    <a ngbNavLink>Three</a>-->
+<!--    <ng-template ngbNavContent>-->
+<!--      <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi.-->
+<!--        Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt eu, congue et odio.-->
+<!--        Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices et. Sed diam urna,-->
+<!--        egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus faucibus nisl enim, nec-->
+<!--        tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius natoque penatibus et-->
+<!--        magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet ultricies in eget-->
+<!--        neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>-->
+<!--    </ng-template>-->
+<!--  </li>-->
+<!--</ul>-->
+
+<!--<div [ngbNavOutlet]="nav" class="mt-2"></div>-->
+
+<!--<pre>Active: {{ active }}</pre>-->
