--- a/training-system/src/app/components/auth/login/login.component.html
+++ b/training-system/src/app/components/auth/login/login.component.html
@@ -7,8 +7,8 @@
     <form [formGroup]="_loginForm" class="login-form" (ngSubmit)="onSubmit($event)">
       <div class="form-layout">
         <mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="Введите email" formControlName="email">
+          <mat-label>Логин</mat-label>
+          <input matInput placeholder="Введите логин" formControlName="email">
         </mat-form-field>
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>Пароль</mat-label>
