--- a/training-system/src/app/components/auth/register/register.component.html
+++ b/training-system/src/app/components/auth/register/register.component.html
@@ -19,8 +19,8 @@
           <input matInput placeholder="Введите отчество" formControlName="patronymic">
         </mat-form-field>
         <mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="Введите email" formControlName="email">
+          <mat-label>Логин</mat-label>
+          <input matInput placeholder="Введите логин" formControlName="email">
         </mat-form-field>
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>Пароль</mat-label>
