--- a/training-system/src/app/components/tasks/task-creation/task-creation.component.html
+++ b/training-system/src/app/components/tasks/task-creation/task-creation.component.html
@@ -56,7 +56,7 @@
                  (dragstart)="dragStart($event)"
                  draggable="true"
             >
-              <app-field-cell></app-field-cell>
+<!--              <app-field-cell></app-field-cell>-->
             </div>
           </div>
           <!--</div>-->
