--- a/training-system/src/app/components/tasks/task-creation/task-creation.component.less
+++ b/training-system/src/app/components/tasks/task-creation/task-creation.component.less
@@ -55,27 +55,17 @@
 }
 
 .field-container {
-  width: 600px;
-  height: 600px;
+  width: 500px;
+  height: 500px;
   margin: 0 0 25px 0;
   display: inline-block;
   vertical-align: top;
 }
 
 .field-cell {
-  width: 100%;
-  height: 100%;
-  border: black solid 1px;
-  min-width: 50px;
-  min-height: 50px;
-  max-width: 50px;
-  max-height: 50px;
-}
-
-.cell-content {
-  width: 50px;
-  height: 50px;
-  background-color: greenyellow;
+  margin: 10px;
+  width: 60px;
+  height: 60px;
 }
 
 
