--- a/training-system/src/app/components/journal/journal.component.less
+++ b/training-system/src/app/components/journal/journal.component.less
@@ -6,3 +6,11 @@
 .table > thead > tr > th{
   border: none;
 }
+
+.all-stat {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+
