--- a/training-system/src/app/components/marks/marks.component.html
+++ b/training-system/src/app/components/marks/marks.component.html
@@ -2,4 +2,39 @@
   [currentTab]="'other'"
 >
 </app-header>
-<p>marks works!</p>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,800" rel="stylesheet">
+<div id="chart">
+  <apx-chart
+    [series]="chartOptions.series"
+    [chart]="chartOptions.chart"
+    [dataLabels]="chartOptions.dataLabels"
+    [plotOptions]="chartOptions.plotOptions"
+    [yaxis]="chartOptions.yaxis"
+    [xaxis]="chartOptions.xaxis"
+    [legend]="chartOptions.legend"
+    [colors]="chartOptions.colors"
+    [grid]="chartOptions.grid"
+  ></apx-chart>
+</div>
+
+<div class="d-flex justify-content-center">
+  <div class="row col-md-6 col-md-offset-3 ">
+    <table class="table table-striped ">
+      <thead class="thead">
+      <tr>
+        <th>Задание</th>
+        <th>Оценка</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let user of solutions">
+        <td>{{user.title}}</td>
+        <td>{{user.mark}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+
