--- a/training-system/src/app/components/dialog/all-stats-dialog/all-stats.dialog.component.html
+++ b/training-system/src/app/components/dialog/all-stats-dialog/all-stats.dialog.component.html
@@ -10,22 +10,10 @@
     [xaxis]="chartOptions.xaxis"
     [legend]="chartOptions.legend"
     [colors]="chartOptions.colors"
-    [grid]="chartOptions.grid"
-  ></apx-chart>
+    [grid]="chartOptions.grid">
+  </apx-chart>
 </div>
 <div mat-dialog-actions>
   <button class="back" mat-button [mat-dialog-close] >Закрыть</button>
 </div>
-<!--<div id="chart">-->
-<!--  <apx-chart-->
-<!--    [series]="chartOptions.series"-->
-<!--    [chart]="chartOptions.chart"-->
-<!--    [dataLabels]="chartOptions.dataLabels"-->
-<!--    [plotOptions]="chartOptions.plotOptions"-->
-<!--    [yaxis]="chartOptions.yaxis"-->
-<!--    [xaxis]="chartOptions.xaxis"-->
-<!--    [legend]="chartOptions.legend"-->
-<!--    [colors]="chartOptions.colors"-->
-<!--    [grid]="chartOptions.grid"-->
-<!--  ></apx-chart>-->
-<!--</div>-->
+
