--- a/training-system/src/app/components/marks/marks.component.html
+++ b/training-system/src/app/components/marks/marks.component.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="d-flex justify-content-center">
-  <div class="row col-md-6 col-md-offset-3 ">
+  <div class="row col-md-4 col-md-offset-3 ">
     <table class="table table-striped ">
       <thead class="thead">
       <tr>
@@ -28,9 +28,9 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let user of solutions">
-        <td>{{user.title}}</td>
-        <td>{{user.mark}}</td>
+      <tr *ngFor="let solution of solutions">
+        <td>{{solution.title}}</td>
+        <td>{{solution.mark}}</td>
       </tr>
       </tbody>
     </table>
