--- a/training-system/src/app/components/tasks/field/field-cell/field-cell.component.less
+++ b/training-system/src/app/components/tasks/field/field-cell/field-cell.component.less
@@ -1,39 +1,52 @@
 .cell-content {
-  width: 50px;
-  height: 50px;
-  background-color: greenyellow;
+  width: 100%;
+  height: 100%;
+  outline: 2px solid black;
+  padding: 5px;
 }
 
 .monkey {
   background-image: url("src/assets/map-props/monkey.png");
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   background-size: contain;
+  /*transform: rotate(180deg);*/
+  &__direction-top{
+
+  }
+  &__direction-bottom{
+
+  }
+  &__direction-right{
+
+  }
+  &__direction-left{
+
+  }
 }
 
 .liana {
   background-image: url("src/assets/map-props/liana.png");
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   background-size: contain;
 }
 
 .basket {
   background-image: url("src/assets/map-props/basket.png");
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   background-size: contain;
 }
 
 .banana {
   background-image: url("src/assets/map-props/banana.png");
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   background-size: contain;
 }
 
 .empty {
-  background-color: greenyellow;
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
 }
