--- a/training-system/src/app/components/tasks/task-creation/task-creation.component.html
+++ b/training-system/src/app/components/tasks/task-creation/task-creation.component.html
@@ -1,23 +1,17 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <p>task-creation works!</p>
+<button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" (click)="openSettingsDialog()">
+  <mat-icon>settings</mat-icon>
+</button>
 <div class="example-container">
   <h2>Список объектов</h2>
-
-  <div
-    cdkDropList
-    #todoList="cdkDropList"
-    [cdkDropListData]="todo"
-    [cdkDropListConnectedTo]="[doneList]"
-    class="example-list"
-    (cdkDropListDropped)="dropCommandToCommandsList($event)">
-    <div class="example-box" *ngFor="let item of todo" cdkDrag>
-      <div *ngIf="item === 'monkey'"><img src="assets/map-props/monkey.png" alt="monkey"></div>
-      <div *ngIf="item === 'basket'"><img src="assets/map-props/basket.png" alt="basket"></div>
-      <div *ngIf="item === 'liana'"><img src="assets/map-props/liana.png" alt="liana"></div>
-      <div *ngIf="item === 'banana'"><img src="assets/map-props/banana.png" alt="banana"></div>
-      <!--//TODO:ПОПРОБОВАТЬ ЦИКЛ ЧЕРЕЗ ДРАГ ЭНД ДРОП СПИСОК, ОНКЛИК, И ПЕРЕМЕННУЮ ДЛЯ CONNECTED TO-->
-    </div>
+  <div class="fields-items-list-wrapper">
+    <app-field-items-list
+      [listData]="sourceFieldsList"
+      (throwCellItem)="setCellItemFromSourceList($event)"
+    >
+    </app-field-items-list>
   </div>
 </div>
 
@@ -37,43 +31,17 @@
 </div>
 <div class="field-container">
   <h2>ИГРОВОЕ ПОЛЕ</h2>
-  <div class="container">
-    <div class="row zero-spacing" *ngFor="let column of matrix; index as i"
-    >
-      <div class="col-1 zero-spacing" *ngFor="let row of column; index as j"
-      >
-        <div
-        >
-          <!--<div class="field-cell zero-spacing"
-               (drop)="dropItemToAnotherItem($event)"
-               (dragover)="dragOver($event)"
-          >
-            <div class="cell-content"
-                 [id]="i+j"
-                 (dragstart)="dragStart($event)"
-                 draggable="true"
-
-            >-->
-          <app-field-cell
-            class="field-cell zero-spacing"
-            (drop)="dropItemToAnotherItem($event)"
-            (dragover)="dragOver($event)"
-            (cellItem)="setCellItem($event)"
-            [type]="row.data">
-          </app-field-cell>
-          <!-- </div>
-         </div>-->
-
-          <!--</div>-->
-          <!--<ng-container *ngTemplateOutlet="fieldItem">
-          </ng-container>-->
-        </div>
+  <div class="field-wrap">
+    <div class="field-row" *ngFor="let column of matrix; index as i">
+      <div class="field-col zero-spacing" *ngFor="let row of column; index as j">
+        <app-field-cell
+          class="field-cell"
+          (drop)="dropItemToAnotherItem($event)"
+          (dragover)="dragOver($event)"
+          (cellItem)="setCellItem($event)"
+          [type]="row.data">
+        </app-field-cell>
       </div>
     </div>
   </div>
 </div>
-<ng-template #fieldItem>
-  <div class="field-cell">
-    БАНАН
-  </div>
-</ng-template>
