--- a/training-system/src/app/components/auth/login/login.component.html
+++ b/training-system/src/app/components/auth/login/login.component.html
@@ -15,7 +15,7 @@
           <input type="password" matInput placeholder="Введите пароль" formControlName="password">
         </mat-form-field>
 
-        <button style="width: 65%; height:50px;align-self: center" mat-raised-button color="primary" type="submit">Войти</button>
+        <button style="width: 65%; height:50px;align-self: center; font-size: 15px" mat-raised-button color="primary" type="submit">Войти</button>
       </div>
     </form>
   </div>
