--- a/training-system/src/app/components/auth/login/login.component.less
+++ b/training-system/src/app/components/auth/login/login.component.less
@@ -1,7 +1,9 @@
 h1{
-  font-family: Raleway, "Helvetica Neue", sans-serif;
+  font-family: 'Montserrat Alternates', sans-serif;
 }
-
+.mat-raised-button.mat-primary {
+  background: #00B74A;
+}
 .login-layout {
   padding-top: 50px;
   display: flex;
