--- a/training-system/src/app/components/auth/register/register.component.html
+++ b/training-system/src/app/components/auth/register/register.component.html
@@ -41,10 +41,10 @@
         </mat-form-field>
         <div class="register-form_toggle-wrapper">
           <div>Я ученик</div>
-          <div><mat-slide-toggle class="register-form_toggle" (change)="onChangeRole($event)"></mat-slide-toggle></div>
+          <div><mat-slide-toggle color="primary" class="register-form_toggle" (change)="onChangeRole($event)"></mat-slide-toggle></div>
           <div>Я учитель</div>
         </div>
-        <button mat-raised-button color="primary" type="submit" style="width: 65%; height:50px;align-self: center">Зарегистрироваться</button>
+        <button mat-raised-button color="primary" type="submit" style="width: 65%; height:50px;align-self: center; font-size: 15px">Создать аккаунт</button>
       </div>
     </form>
   </div>
