--- a/training-system/src/app/components/auth/register/register.component.less
+++ b/training-system/src/app/components/auth/register/register.component.less
@@ -1,7 +1,12 @@
 input {
   border-radius: 20px;
 }
-
+::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #424242; /*replace with your color*/
+}
+.mat-raised-button.mat-primary {
+  background: #00B74A;
+}
 .register-layout {
   padding-top: 50px;
   display: flex;
