--- a/training-system/src/app/components/shared/header/header.component.less
+++ b/training-system/src/app/components/shared/header/header.component.less
@@ -4,3 +4,7 @@
 .enter {
   font-family: 'Montserrat Alternates', sans-serif;
 }
+.mat-toolbar.mat-primary {
+  background: #424242;
+  color: #fff;
+}
