--- a/training-system/src/app/components/shared/header/header.component.html
+++ b/training-system/src/app/components/shared/header/header.component.html
@@ -39,7 +39,7 @@
   </span>
   <span class="example-spacer">
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon"
-            (click)="navigate('tasks')"
+            (click)="navigate('task-view')"
     >
     <span class="mat-h1 enter">Задания</span>
   </button>
