--- a/training-system/src/app/components/tasks/tasks.component.html
+++ b/training-system/src/app/components/tasks/tasks.component.html
@@ -1,6 +1,6 @@
-<app-header
-  [currentTab]="'tasks'"
->
-</app-header>
-<p>tasks works!</p>
-<app-task-creation></app-task-creation>
+<!--<app-header-->
+<!--  [currentTab]="'tasks'"-->
+<!--&gt;-->
+<!--</app-header>-->
+<!--<app-task-creation></app-task-creation>-->
+<app-task-view></app-task-view>
