--- a/training-system/src/app/components/tasks/task-creation/task-creation.component.html
+++ b/training-system/src/app/components/tasks/task-creation/task-creation.component.html
@@ -1,6 +1,10 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<p>task-creation works!</p>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<app-header
+  [currentTab]="'tasks'"
+>
+</app-header>
 <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" (click)="openSettingsDialog()">
   <mat-icon>settings</mat-icon>
 </button>
