--- a/training-system/src/app/components/tasks/field/field-cell/field-cell.component.html
+++ b/training-system/src/app/components/tasks/field/field-cell/field-cell.component.html
@@ -2,5 +2,5 @@
   class="cell-content monkey"
   draggable="true"
   (dragstart)="dragStart($event)"
-  [ngClass]="{monkey: isMonkey,liana: isLiana, banana: isBanana, basket: isBasket, empty: isEmpty}">
+  [ngClass]="{m: isMonkey,l: isLiana, b: isBanana, u: isBasket, e: isEmpty}">
 </div>
