--- a/training-system/src/app/components/tasks/field/field-cell/field-cell.component.less
+++ b/training-system/src/app/components/tasks/field/field-cell/field-cell.component.less
@@ -5,48 +5,61 @@
   padding: 5px;
 }
 
-.monkey {
+/*monkey*/
+.m {
   background-image: url("src/assets/map-props/monkey.png");
   width: 100%;
   height: 100%;
   background-size: contain;
+  background-repeat: no-repeat;
   /*transform: rotate(180deg);*/
-  &__direction-top{
+
+  &__direction-top {
 
   }
-  &__direction-bottom{
+
+  &__direction-bottom {
 
   }
-  &__direction-right{
+
+  &__direction-right {
 
   }
-  &__direction-left{
+
+  &__direction-left {
 
   }
 }
 
-.liana {
+/*liana*/
+.l {
   background-image: url("src/assets/map-props/liana.png");
   width: 100%;
   height: 100%;
   background-size: contain;
+  background-repeat: no-repeat;
 }
 
-.basket {
+/*basket*/
+.u {
   background-image: url("src/assets/map-props/basket.png");
   width: 100%;
   height: 100%;
   background-size: contain;
+  background-repeat: no-repeat;
 }
 
-.banana {
+/*banana*/
+.b {
   background-image: url("src/assets/map-props/banana.png");
   width: 100%;
   height: 100%;
   background-size: contain;
+  background-repeat: no-repeat;
 }
 
-.empty {
+/*empty*/
+.e {
   width: 100%;
   height: 100%;
 }
