--- a/training-system/src/app/components/tasks/tasks.component.html
+++ b/training-system/src/app/components/tasks/tasks.component.html
@@ -1,6 +1,5 @@
-<!--<app-header-->
-<!--  [currentTab]="'tasks'"-->
-<!--&gt;-->
-<!--</app-header>-->
-<!--<app-task-creation></app-task-creation>-->
-<app-task-view></app-task-view>
+<app-header
+  [currentTab]="'tasks'"
+>
+</app-header>
+<app-task-creation></app-task-creation>
